# tree-rs

./: Cargo.toml  LICENSE  PROGRESS.md  README.md  README.me  install  timer.py
.github/workflows/: publish.yaml  release.yml  rust-ci.yaml
src/: config.rs  filter.rs  lib.rs  main.rs  pathiterator.rs  tree_printer.rs
src/tests/: mod.rs  test_main.rs  test_pathiterator.rs  test_simple.rs  utils.rs
tests/: compare  test_simple.rs  test_terminal.rs
