[package]
name = "tree-rs"
version = "0.6.4"
authors = ["Sigurd Holsen <sighol@gmail.com>"]
description = """
tree-rs is a cross platform reimplementation of the linux *tree* command.
It supports colored output and specifying the number of directory levels it
should search.
"""
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
repository = "https://github.com/sighol/tree-rs"


[dependencies]
clap = "2.34"
term = "0.7"
globset = "0.4"
